2007-01-11  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayState.py (DisplayState.__init__): fix level of 'root'
	looger and WarnHandler
	* src/GrampsWidgets.py: ValidatableMaskedEntry.set_default_error_msg()
	method added

2007-01-10  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py: add support for an "empty" signal on 
	ValidatableMaskedEntry so that we can update the value when the
	string has been cleared (bug #821)
	* src/DateEdit.py: catch empty signal (bug #821)

2007-01-09  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix 0000817: typo "syle" intead of "style"

2007-01-09  Alex Roitman  <shura@gramps-project.org>
	* src/const.py.in: use proper macros.
	* src/gramps.py: Correctly define dirs.

2007-01-10  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Selectors/_BaseSelector.py (__init__, _on_row_activated):
	enable selection by Double-click or Enter

2007-01-09  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidget.py: set_completion_mode() added, exact_completion
	fixed, cleanup
	* src/GrampsLogger/_ErrorView.py: missing help_clicked method added
	* src/Editors/_EditEventRef.py: reminder about missing help handle
	
2007-01-08  Don Allingham  <don@gramps-project.org>

	* src/DataViews/_MediaView.py: pylint
	* src/DataViews/_RepositoryView.py: pylint
	* src/DataViews/_SourceView.py: pylint
	* src/DataViews/_EventView.py: pylint
	* src/DataViews/_FamilyList.py: pylint
	* src/DataViews/_PlaceView.py: pylint
	* src/DataViews/__init__.py: pylint
	* src/DataViews/_PersonView.py: pylint
	* src/DataViews/Makefile.am: pylint
	* src/DataViews/_RelationView.py: pylint
	* src/RelLib/_CalSdn.py: pylint
	* src/RelLib/_Person.py: pylint
	* src/RelLib/_Family.py: pylint
	* src/RelLib/_EventType.py: pylint
	* src/RelLib/_GrampsType.py: pylint
	* src/RelLib/_Event.py: pylint
	* src/RelLib/_LdsOrd.py: pylint
	* src/PageView.py: pylint