@@ -1,3 +1,7 @@
+2007-01-11  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py (GedcomParser): fix parsing of the PLAC.FORM
+	construct, handle Heredis's broken REPO format
+
 2007-01-11  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
 	* src/DisplayState.py (DisplayState.__init__): fix level of 'root'
 	looger and WarnHandler
